fix: reactive elements on small screens

--- a/src/components/common/footer/FooterStyles.scss
+++ b/src/components/common/footer/FooterStyles.scss
@@ -43,3 +43,9 @@
         width: 75%;
   max-width: 60rem;
 }
+
+@media (max-width: 49em) {
+  #social-bar {
+    flex-direction: column;
+  }
+}
