--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,13 +5,3 @@ body {
   font-family: Arial, sans-serif;
   color: $primary-color;
 }
-
-#background {
-  position: fixed;
-  top: -10px;
-  left: -10px;
-  width: 110%;
-  height: 110%;
-  z-index: -1;
-  filter: blur(10px);
-}
